# v4r_ros_wrappers

./: .gitignore  CONTRIBUTING.md  Readme.md  Tutorial.md
camera_tracker/: CHANGELOG.rst  CMakeLists.txt  package.xml
camera_tracker/include/: camera_tracker.h
camera_tracker/src/: camera_tracker.cpp
camera_tracker_srv_definitions/: CHANGELOG.rst  CMakeLists.txt  package.xml
camera_tracker_srv_definitions/srv/: get_tracking_results.srv  save_tracking_results_to_file.srv  visualize_compound.srv
classifier_srv_definitions/: CHANGELOG.rst  CMakeLists.txt  package.xml
classifier_srv_definitions/srv/: classify.srv  mv_classify.srv  segment_and_classify.srv
do_learning_srv_definitions/: CMakeLists.txt  package.xml
do_learning_srv_definitions/srv/: save_model.srv
dynamic_object_learning/: CMakeLists.txt  package.xml
dynamic_object_learning/include/: object_learning_ros.h
dynamic_object_learning/src/: object_learning_ros.cpp  test_dol_from_files.cpp
incremental_object_learning/: CHANGELOG.rst  CMakeLists.txt  package.xml
incremental_object_learning/include/: object_learning_ros.h
incremental_object_learning/src/: noise_model_based_cloud_integration.cpp  object_learning_ros.cpp  test_dol_from_files.cpp
incremental_object_learning_srv_definitions/: CHANGELOG.rst  CMakeLists.txt  package.xml
incremental_object_learning_srv_definitions/srv/: create_3D_model.srv  learn_object.srv  learn_object_inc.srv  save_model.srv  write_debug_images_to_disk.srv
multiview_object_recognizer/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt~  ReadMe.md  package.xml
multiview_object_recognizer/cfg/: params.yaml  params_dump.yaml
multiview_object_recognizer/include/: multiview_object_recognizer_ros.h  world_representation_ros.h
multiview_object_recognizer/launch/: multiview_recognition.launch  multiview_recognition_icra.launch  multiview_recognition_isolated.launch  singleview_recognition_isolated.launch
multiview_object_recognizer/src/: eval_main.cpp  main.cpp  multiview_object_recognizer_ros.cpp  test_multiview_recognizer.cpp  world_representation_ros.cpp
object_classifier/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
object_classifier/include/: global_classifier.h  global_nn_classifier_ros.h
object_classifier/launch/: classifier.launch  classifier_demo.launch  classifier_test.launch  classifier_with_segmentation.launch
object_classifier/src/: global_classifier.cpp  global_nn_classifier_ros.cpp  test.cpp
object_detection_and_tracking/: CHANGELOG.rst  CMakeLists.txt  package.xml
object_detection_and_tracking/src/: detect_and_track_object.cpp
object_gestalt_segmentation/: CMakeLists.txt  README.md  package.xml
object_gestalt_segmentation/include/object_gestalt_segmentation/: object_gestalt_segmentation.h
object_gestalt_segmentation/launch/: startup.launch
object_gestalt_segmentation/src/: object_gestalt_segmentation.cpp  test_object_gestalt_segmentation.cpp
object_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
object_perception_msgs/msg/: BBox.msg
object_tracker/: CHANGELOG.rst  CMakeLists.txt  package.xml
object_tracker/include/: object_tracker.h
object_tracker/src/: object_tracker.cpp
object_tracker_msg_definitions/: CMakeLists.txt  package.xml
object_tracker_msg_definitions/msg/: Confidence.msg  ObjectInfo.msg
object_tracker_srv_definitions/: CHANGELOG.rst  CMakeLists.txt  package.xml
object_tracker_srv_definitions/srv/: change_tracking_model.srv
recognition_srv_definitions/: CHANGELOG.rst  CMakeLists.txt  package.xml
recognition_srv_definitions/srv/: get_configuration.srv  multiview_recognize.srv  recognize.srv  retrain_recognizer.srv
segment_and_classify/: CHANGELOG.rst  CMakeLists.txt  package.xml
segment_and_classify/launch/: segment_and_classify.launch
segment_and_classify/src/: test.cpp
segmentation/: CHANGELOG.rst  CMakeLists.txt  package.xml
segmentation/include/: pcl_segmentation_ros.h
segmentation/src/: pcl_segmentation_ros.cpp  test_segmentation.cpp
segmentation_srv_definitions/: CHANGELOG.rst  CMakeLists.txt  package.xml
segmentation_srv_definitions/srv/: MS_segment.srv  segment.srv
singleview_object_recognizer/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.orig  ReadMe.md  package.xml  package.xml~
singleview_object_recognizer/action/: CheckObjectPresence.action
singleview_object_recognizer/include/: recognizer_ros.h
singleview_object_recognizer/launch/: recognition_service.launch
singleview_object_recognizer/scripts/: action_server.py
singleview_object_recognizer/src/: CheckObjectPresence.cpp  CheckObjectPresence_client.cpp  ply_to_pcl.cpp  recognition_service.cpp  recognizer_ros.cpp  test_recognition_service.cpp  test_single_view_recognizer.cpp
temporal_filtering/: CMakeLists.txt  package.xml
temporal_filtering/launch/: startup.launch
temporal_filtering/src/: temporal_filtering_node.cpp
temporal_filtering_srv_definitions/: CMakeLists.txt  package.xml
temporal_filtering_srv_definitions/srv/: temporal.srv
v4r_ros_wrappers/: CHANGELOG.rst  CMakeLists.txt  package.xml
