<?xml version="1.0"?>
<package>
  <name>object_classifier</name>
  <version>0.1.3</version>
  <description>The object_classifier package</description>
  <maintainer email="faeulhammer@acin.tuwien.ac.at">Thomas Faeulhammer</maintainer>

  <license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>visualization_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
  <build_depend>classifier_srv_definitions</build_depend>
  <build_depend>segmentation_srv_definitions</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>classifier_srv_definitions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>segmentation_srv_definitions</run_depend>
  <run_depend>pcl_conversions</run_depend>

  
  <build_depend>v4r</build_depend>
  <run_depend>v4r</run_depend>

  <export>

  </export>
</package>
